--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   video_player: ^2.8.3
   camera: ^0.10.5+9
   image_gallery_saver: ^2.0.3
+  flame: ^1.17.0
+  perlin: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
